--- a/index.html
+++ b/index.html
@@ -30,8 +30,10 @@
         <p>Limite plastico</p>
         <input type="number" name="lp" id="lp" placeholder="lp" />
       </form>
-      <button id="clasificar">Clasificar</button>
-      <p id="resultado"></p>
+      <div class="divResultado">
+        <button id="clasificar">Clasificar</button>
+        <p id="resultado"></p>
+      </div>
     </main>
 
     <script src="./sucs.js" type="module"></script>
